[package]
name = "disease_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono", "macros"] }
tokio = { version = "1.47", features = ["full"] }
log = "0.4"
flexi_logger = "0.28"
chrono = "0.4"
num_cpus = "1.16"
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
